[gd_scene load_steps=7 format=3 uid="uid://jdbalndij2cc"]

[ext_resource type="Script" path="res://menu.gd" id="1_76h7t"]
[ext_resource type="Texture2D" uid="uid://caukjepehhoi5" path="res://UI/Camera_White.png" id="2_5ub80"]
[ext_resource type="Texture2D" uid="uid://bjajs4sjdeaco" path="res://UI/Reload_White.png" id="2_dsmfr"]
[ext_resource type="Texture2D" uid="uid://bb3cgr1aocn8k" path="res://UI/Folder_White.png" id="3_3wksw"]
[ext_resource type="Texture2D" uid="uid://dk0oxbxfdn2yp" path="res://UI/List_White.png" id="5_bfvkp"]
[ext_resource type="Texture2D" path="res://UI/Check_White.png" id="6_wqhet"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_76h7t")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BasicConfigLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Basic Config Settings"
horizontal_alignment = 1

[node name="ResolutionHBox" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="WidthLabel" type="Label" parent="Panel/VBoxContainer/ResolutionHBox"]
layout_mode = 2
text = "Width:"

[node name="WidthSpinBox" type="SpinBox" parent="Panel/VBoxContainer/ResolutionHBox"]
layout_mode = 2
allow_greater = true

[node name="HeightLabel" type="Label" parent="Panel/VBoxContainer/ResolutionHBox"]
layout_mode = 2
text = "Height:"

[node name="HeightSpinBox" type="SpinBox" parent="Panel/VBoxContainer/ResolutionHBox"]
layout_mode = 2
allow_greater = true

[node name="Spacer" type="TextureRect" parent="Panel/VBoxContainer/ResolutionHBox"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_5ub80")
stretch_mode = 2

[node name="FrameTimeCheckBox" type="CheckBox" parent="Panel/VBoxContainer/ResolutionHBox"]
layout_mode = 2
text = "Show Frame Time (ms)"

[node name="ConfigPlaceholder" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PLYFileSelectHBox" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Panel_VBoxContainer_DirectorySelectHBox#SelectDirectoryButton" type="Button" parent="Panel/VBoxContainer/PLYFileSelectHBox"]
layout_mode = 2
theme_override_constants/outline_size = 0
text = "PLY Import Directory"
icon = ExtResource("3_3wksw")

[node name="RefreshPLYButton" type="Button" parent="Panel/VBoxContainer/PLYFileSelectHBox"]
layout_mode = 2
text = "
"
icon = ExtResource("2_dsmfr")
flat = true
icon_alignment = 1

[node name="Panel_VBoxContainer_DirectorySelectHBox#PLYDirectoryPathLabel" type="Label" parent="Panel/VBoxContainer/PLYFileSelectHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="PLYFileOptionButton" type="OptionButton" parent="Panel/VBoxContainer/PLYFileSelectHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/icon = ExtResource("5_bfvkp")
text_overrun_behavior = 3
expand_icon = true
allow_reselect = true

[node name="LoadFileButton" type="Button" parent="Panel/VBoxContainer/PLYFileSelectHBox"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("6_wqhet")

[node name="DirectoryDialog" type="FileDialog" parent="Panel/VBoxContainer"]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true
